<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.ivoke.FeedBackActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedback_give_your_opinion" />

    <EditText
        android:id="@+id/feedback_txt_message"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:lines="10"
		android:inputType="textMultiLine"
        android:layout_gravity="top"
        android:gravity="top" 
         >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/feedback_txt_message"
        android:layout_below="@+id/feedback_txt_message"
        android:layout_marginTop="14dp"
        android:text="@string/feedback_give_your_suggest" />

    <EditText
        android:id="@+id/feedback_txt_suggest"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:lines="10"
        android:inputType="textMultiLine"
        android:layout_gravity="top"
        android:gravity="top" 
         />

    <Button
        style="@style/DefaultTheme.ButtonStyle"
        android:id="@+id/feedback_button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/feedback_txt_suggest"
        android:layout_below="@+id/feedback_txt_suggest"
        android:layout_marginTop="26dp"
        android:onClick="onClick"
        android:text="@string/feedback_btn_send"
        android:background="@drawable/buttons_white_and_blue" />

</RelativeLayout>